--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,21 +14,24 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="munjeti.testing.androidtest5.MainActivity"
-            android:label="@string/app_name" >
+            android:name="munjeti.testing.androidtest5.CreateEvent"
+            android:label="@string/app_name" 
+            android:parentActivityName="munjeti.testing.androidtest5.EventHub" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="munjeti.testing.androidtest5.EventHub" />
+        </activity>
+        <activity
+            android:name="munjeti.testing.androidtest5.EventHub"
+            android:label="@string/title_activity_event_hub" >
+            
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name="munjeti.testing.androidtest5.EventHub"
-            android:label="@string/title_activity_event_hub"
-            android:parentActivityName="munjeti.testing.androidtest5.MainActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="munjeti.testing.androidtest5.MainActivity" />
+            
+           
         </activity>
     </application>
 
