--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="18" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -15,7 +17,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="munjeti.testing.androidtest5.CreateEvent"
-            android:label="@string/app_name" 
+            android:label="@string/create_event" 
             android:parentActivityName="munjeti.testing.androidtest5.EventHub" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
