--- a/project.properties
+++ b/project.properties
@@ -12,3 +12,4 @@
 
 # Project target.
 target=android-18
+android.library.reference.1=../../../../../../Downloads/facebook-android-sdk-3.14/facebook-android-sdk-3.14/facebook
